--- a/css/sales.css
+++ b/css/sales.css
@@ -46,6 +46,13 @@ body {
     grid-template-columns: auto 20rem;
 }
 
+.menu {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
 .main {
     width: 100%;
     height: 100%;
@@ -425,6 +432,40 @@ body {
     grid-template-columns: 10% 10% repeat(4, 17%);
     justify-content: center;
     align-items: center;
+}
+
+.main-menu {
+    margin: 5vw 10vh;
+    padding: 18px;
+    display: grid;
+    gap: 1em;
+    grid-auto-rows: 10rem;
+    grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+    background-color: #cfcfcf;
+    border-radius: 8px;
+}
+
+.btn-blue {
+    background-color: #037ffc;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+}
+
+.btn-blue:hover {
+    background-color: #4b94de;
+}
+
+.btn-red {
+    background-color: #d13f3f;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+}
+
+.btn-red:hover {
+    background-color: #d66767;
+    color: #fff;
 }
 
 @media only screen and (max-width: 550px) {
